tests/schema-gen/tests/projection/schemas/invalid/no-root-model-with-sync.prisma
datasource dbNoRootModelWithSync {
  provider = "postgresql"
}

generator clientNoRootModelWithSync {
  provider = "prisma-client"
  output   = "../../generated/prisma"
}

generator idbClientNoRootModelWithSync {
  provider   = "idb-client-generator"
  output     = "../../generated/prisma-idb"
  outboxSync = true
  exclude    = ["Changelog"]

  // missing rootModel field while outboxSync is enabled, should fail
  // rootModel = "UserNoRootModelWithSync"
}

model UserNoRootModelWithSync {
  id          String       @id
  name        String
  childModels ChildModel[]
}

model ChildModel {
  id     String                  @id
  userId String
  user   UserNoRootModelWithSync @relation(fields: [userId], references: [id])
}

model Changelog {
  id              String          @id @default(uuid(7))
  model           String
  keyPath         Json
  operation       ChangeOperation
  scopeKey        String
  outboxEventId   String  @unique

  @@index([model, id])
}

enum ChangeOperation {
  create
  update
  delete
}
